[package]
name = "dns-death"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-recursion = "1.0.5"
bit-vec = "0.6.3"
byteorder = "1.5.0"
env_logger = "0.10.0"
int-enum = { version = "0.5.0", features = ["convert"] }
itertools = "0.11.0"
log = "0.4.20"
moka = { version = "0.12.1", features = ["future"] }
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.190", features = ["derive"] }
serde_repr = "0.1.17"
tokio = { version = "1.33.0", features = ["full"] }
